<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_type">com.valuetext1android.login</string>
    <string name="app_name"><b>ValueText1</b></string>
    <string name="app_package">com.valuetext1android</string>
    <string name="welcome">Welcome %s</string>
    <string name="logout_button">Logout</string>
    <string name="fetch_contacts_button">Fetch Contacts</string>
    <string name="fetch_accounts_button">Fetch Accounts</string>
    <string name="clear_button">Clear</string>

    <string name="select_audio_file_title">audio</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="About">Available</string>
    <string name="AbouxtUs">About</string>
    <string name="checkedMark">"\u2713"</string>
    <string name="app_language">App Language</string>
    <string name="selected_lang">English </string>
    <string name="jan_koum">Jan Koum</string>
    <string name="write_a_message">Write a message</string>
    <string name="aboutus">AboutUs</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="abc_search_hint">abc_search_hint</string>
    <string name="settings">Settings</string>
    <string name="Name">Name</string>
    <string name="save">save</string>

    <string name="document">Document</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="contacts">Contacts</string>
    <string name="audio">Audio</string>
    <string name="yesterday">yesterday</string>
    <string name="_2">2</string>
    <string name="hey_how_are_you">hey_how_are_you</string>
</resources>
