<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:id="@+id/relay_Bs"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/_20dp"
    android:paddingBottom="@dimen/_20dp"
    android:paddingRight="@dimen/_20dp"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:id="@+id/doc"
        android:src="@drawable/ic_insert_drive_file_black_24dp"
        android:background="@drawable/circle"
        android:elevation="@dimen/_10dp"
        android:padding="@dimen/_10dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_40dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/document"
        android:layout_below="@id/doc"
        android:layout_marginStart="@dimen/_25dp"
        />


   <ImageView
       android:layout_width="@dimen/_50dp"
       android:layout_height="@dimen/_50dp"
       android:src="@drawable/ic_image_black_24dp"
       android:padding="@dimen/_10dp"
       android:elevation="@dimen/_10dp"
       android:layout_centerHorizontal="true"
       android:id="@+id/gal"
       android:background="@drawable/v_circle"
       android:layout_marginStart="@dimen/_120dp"
       android:layout_marginTop="@dimen/_40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:layout_below="@id/gal"
      android:layout_centerHorizontal="true"
        />
    <ImageView
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:src="@drawable/map"
        android:background="@drawable/circle"
        android:id="@+id/map"
        android:padding="@dimen/_10dp"
        android:elevation="@dimen/_10dp"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/_30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/loc"
        android:layout_below="@id/map"
       android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp" />
    <ImageView
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:src="@drawable/phone"
        android:background="@drawable/circle"
        android:layout_below="@id/doc"
        android:id="@+id/contacs"
        android:padding="@dimen/_10dp"
        android:elevation="@dimen/_10dp"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_50dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:layout_below="@id/contacs"
        android:layout_marginStart="@dimen/_25dp"
        />
    <ImageView
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:src="@drawable/ic_headset_black_24dp"
        android:padding="@dimen/_10dp"
        android:elevation="@dimen/_10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gal"
        android:id="@+id/audio"
        android:background="@drawable/or_circle"
        android:layout_marginStart="@dimen/_120dp"
        android:layout_marginTop="@dimen/_50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio"
        android:layout_below="@id/audio"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
