<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?android:colorBackground"
	android:id="@+id/root">

	<include layout="@layout/header" />

	<!--<androidx.recyclerview.widget.RecyclerView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/chatRV"
		android:layout_marginTop="?attr/actionBarSize"/>-->

	<!--<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/fab_margin"
		android:clickable="true"
		app:srcCompat="@drawable/ic_chat_bubble"
		tools:ignore="VectorDrawableCompat" />-->

	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?android:colorBackground"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:visibility="gone">

		<Button
			android:id="@+id/fetch_contacts"
			android:layout_width="0dp"
			android:layout_height="47dp"
			android:onClick="onFetchMainDashboard"
			android:text="@string/fetch_contacts_button"
			android:background="@drawable/sf__passcode_primary_color_button"
			android:textColor="?attr/sfColorSecondary"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_marginEnd="10dp"/>

		<Button android:id="@+id/fetch_accounts"
			android:layout_width="0dp"
			android:layout_height="47dp"
			android:onClick="onFetchAccountsClick"
			android:text="@string/fetch_accounts_button"
			android:background="@drawable/sf__passcode_primary_color_button"
			android:textColor="?attr/sfColorSecondary"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_marginEnd="10dp" />

		<Button android:id="@+id/clear"
			android:layout_width="0dp"
			android:layout_height="47dp"
			android:onClick="onClearClick"
			android:text="@string/clear_button"
			android:background="@drawable/sf__passcode_secondary_color_button"
			android:textColor="?attr/sfNegativeButtonTextColor"
			android:layout_gravity="center"
			android:layout_weight="1"/>
	</LinearLayout>

	<ListView android:id="@+id/contacts_list"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?android:colorBackground"
		android:textColor="?android:textColor" />

	<androidx.recyclerview.widget.RecyclerView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/chatRV"
		android:layout_marginTop="@dimen/_10dp"/>

</LinearLayout>

